--- a/app/src/main/res/layout/activity_hauptbildschirm.xml
+++ b/app/src/main/res/layout/activity_hauptbildschirm.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/loOverview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvProfile"
+        <Button
+            android:id="@+id/btnProfile"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="@string/profil" />
 
         <LinearLayout
@@ -28,18 +29,18 @@
             <TextView
                 android:id="@+id/tvBurnt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/verbrennt" />
 
             <TextView
-                android:id="@+id/tvCountCalories"
+                android:id="@+id/tvCountBurnt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:gravity="center"
-                android:text="123" />
+                android:text="123"
+                android:textSize="18sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -51,24 +52,33 @@
             <TextView
                 android:id="@+id/tvSteps"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/schritte" />
 
             <TextView
                 android:id="@+id/tvCountSteps"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="123" />
+                android:text="123"
+                android:textSize="18sp" />
         </LinearLayout>
 
     </LinearLayout>
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:context=".Hauptbildschirm" />
+
+
     <Button
-        android:id="@+id/btnLetsGo"
+        android:id="@+id/btnGo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/loslegen" />
