--- a/app/src/main/res/layout/activity_registrierung.xml
+++ b/app/src/main/res/layout/activity_registrierung.xml
@@ -209,18 +209,21 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/btnSignUp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/sonicBackgroundColor"
             android:onClick="signUp"
             android:shadowColor="@color/sonicBackgroundShadow"
             android:text="@string/registrieren"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
 
