--- a/app/src/main/res/layout/activity_registrierung.xml
+++ b/app/src/main/res/layout/activity_registrierung.xml
@@ -81,9 +81,8 @@
                 android:layout_width="142dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:editable="false"
                 android:ems="10"
-                android:enabled="true"
+                android:enabled="false"
                 android:inputType="textPersonName" />
 
             <ImageButton
@@ -154,7 +153,8 @@
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|numberDecimal"
+                android:numeric="decimal" />
         </LinearLayout>
 
         <LinearLayout
@@ -220,6 +220,18 @@
                 android:entries="@array/array_Hobby" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvFehlermeldung"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/fehlermeldung"
+            android:textColor="@android:color/holo_red_light"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
