--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="123"
+                android:text="0.0"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 android:textSize="18sp" />
 
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="123"
+                android:text="0.0"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:context=".Hauptbildschirm" />
+        tools:context=".MainPageActivity" />
 
 
     <Button
