--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,7 @@
         tools:layout_editor_absoluteY="125dp">
 
         <TextView
-            android:id="@+id/tvProfil"
+            android:id="@+id/tvProfile"
             android:layout_width="wrap_content"
             android:layout_height="90dp"
             android:layout_weight="1"
@@ -70,7 +70,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvAlter"
+                android:id="@+id/tvDate"
                 android:layout_width="112dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -84,12 +84,12 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/etDatum"
+                    android:id="@+id/etDate"
                     android:layout_width="167dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:enabled="false"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName" />
 
                 <ImageButton
@@ -114,7 +114,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvGeschlecht"
+                android:id="@+id/tvGender"
                 android:layout_width="168dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -124,16 +124,16 @@
                 android:textColor="@color/sonicBackgroundColor" />
 
             <Spinner
-                android:id="@+id/spinnerGeschlecht"
+                android:id="@+id/spinnerGender"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:entries="@array/array_Geschlecht"
-                style="@style/Widget.AppCompat.Spinner.Underlined"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:entries="@array/array_Geschlecht" />
         </LinearLayout>
 
         <LinearLayout
@@ -146,7 +146,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvGewicht"
+                android:id="@+id/tvWeight"
                 android:layout_width="112dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -154,7 +154,7 @@
                 android:textColor="@color/sonicBackgroundColor" />
 
             <EditText
-                android:id="@+id/etGewicht"
+                android:id="@+id/etWeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -175,7 +175,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvTaetigkeit"
+                android:id="@+id/tvJob"
                 android:layout_width="168dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -185,7 +185,7 @@
                 android:textColor="@color/sonicBackgroundColor" />
 
             <Spinner
-                android:id="@+id/spinnerTaetigkeit"
+                android:id="@+id/spinnerJob"
                 style="@style/Widget.AppCompat.Spinner.Underlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -208,7 +208,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvAktivitaet"
+                android:id="@+id/tvHobby"
                 android:layout_width="168dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -230,7 +230,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvFehlermeldung"
+            android:id="@+id/tvError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
